[package]
name = "telegram_bot"
version = "0.2.0"
edition = "2021"
authors = ["Steppy"]
description = "A simple wrapper around the telegram bot api"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.12.2"
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
linkify = "0.10.0"
enum-assoc = "1.1.0"